# bk-chatbot

./: .flake8  .gitignore  .pre-commit-config.yaml  Aptfile  License.txt  Procfile  README.md  README_en.md  app.yml  develop.md  pyproject.toml  pytest.ini  requirements.txt  settings.py  settings_test.py  setup.cfg  urls.py  wsgi.py
adapter/api/: __init__.py  base.py  exception.py
adapter/common/: __init__.py  admin.py  audit.py  decorators.py  exceptions.py  json.py  log.py  middlewares.py  models.py  mymako.py  pxfilter.py  thread.py  utils.py
adapter/utils/: __init__.py  aes.py  base_crypt.py  cache.py  db.py  drf.py  feature_toggle.py  local.py  tests.py  time_handler.py
backend/: control  requirements.txt  server.py
backend/opsbot/: log.py  (+13 more)
blueapps/: __init__.py
common/: constants.py  exceptions.py  generic.py  pagination.py  validation.py
config/: __init__.py  default.py  dev.py  domains.py  ieod.py  prod.py  stag.py
docs/: CONTRIBUTING.md  architecture.md  code_structure.md  createskills.md  deploy.md  i18n.md  knowledge.md  plugin.md  release.md  timer.md  usage.md  usecase.md
frontend/: .babelrc  .eslintrc.js  index-dev.html  index.html  package.json  postcss.config.js
module_api/: urls.py  views.py
module_biz/: admin.py  constants.py  exceptions.py  handler.py  models.py  serializers.py  urls.py
module_faq/: models.py  serializers.py  views.py
module_index/: views.py
module_intent/: admin.py  exceptions.py  models.py  urls.py
module_open/: urls.py  views.py
scripts/: cron.py  migrate.py
templates/: 403.html  500.html  base.html
(+836 files in other folders)
